# tudat-cpp-build-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindCSpice.cmake  TudatFindBoost.cmake
cmake/sofa_stub/sofa/: sofa.h  sofam.h
src/: main.cpp
